--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Technical Documentation Page</title>
         <link rel="stylesheet" href="/styles.css">
+        <link rel="icon" href="images/pythonIcon.png" type="image/png">
     </head>
     <body>
         <main id="main-doc">
@@ -16,6 +17,7 @@
                 <li><a class="nav-link" href="#isPythonOPP">Is Python OOP?</a></li>
                 <li><a class="nav-link" href="#mainFeatures">Main features</a></li>
             </nav>
+
             <section class="main-section" id="introduction">
                 <header>Introduction</header>
                 <p>Python is a high-level, interpreted programming language known for its readability and versatility. It is widely used in web development, data analysis, artificial intelligence, scientific computing, and more.</p>
@@ -27,7 +29,10 @@
                 <li>Easy to learn and use</li>
                 <li>Extensive libraries and frameworks</li>
                 <li>Community support</li>
+                <li>Open-source</li>
+                <li>Large ecosystem</li>
             </section>
+
             <section class="main-section" id="whatIsPython?">
                 <header>What is Python?</header>
                 <p>Python is an interpreted, high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation.</p>
@@ -40,7 +45,10 @@
                 <li>Interpreted language</li>
                 <li>High-level language</li>
                 <li>General-purpose language</li>
+                <li>Supports multiple programming paradigms</li>
+                <li>Extensive standard library</li>
             </section>
+            
             <section class="main-section" id="pythonSyntax">
                 <header>Python Syntax</header>
                 <p>Python's syntax is designed to be intuitive and its code highly readable. Python uses indentation to define code blocks, instead of curly braces or keywords.</p>
@@ -52,7 +60,10 @@
                 <li>Indentation is crucial</li>
                 <li>Readable and clean syntax</li>
                 <li>Dynamic typing</li>
+                <li>Supports functional programming</li>
+                <li>Supports procedural programming</li>
             </section>
+
             <section class="main-section" id="isPythonOPP">
                 <header>Is Python OOP?</header>
                 <p>Yes, Python supports Object-Oriented Programming (OOP). It allows the definition of classes along with composition and inheritance.</p>
@@ -68,7 +79,10 @@
                 <li>Supports classes and objects</li>
                 <li>Supports inheritance and polymorphism</li>
                 <li>Encapsulation and abstraction</li>
+                <li>Supports multiple inheritance</li>
+                <li>Supports metaclasses</li>
             </section>
+
             <section class="main-section" id="mainFeatures">
                 <header>Main features</header>
                 <p>Python has several features that make it a powerful and versatile language:</p>
@@ -82,6 +96,8 @@
                 <li>Extensive standard library</li>
                 <li>Cross-platform compatibility</li>
                 <li>Support for multiple programming paradigms</li>
+                <li>Dynamic typing</li>
+                <li>Garbage collection</li>
             </section>
         </main>
     </body>
