--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <main id="main-doc">
             <nav id="navbar">
                 <header>Python Documentation</header>
-                <li><a class="nav-link" href="#introduction">Introduction</a></li>
-                <li><a class="nav-link" href="#whatIsPython?">What is Python?</a></li>
-                <li><a class="nav-link" href="#pythonSyntax">Python Syntax</a></li>
-                <li><a class="nav-link" href="#isPythonOPP">Is Python OOP?</a></li>
-                <li><a class="nav-link" href="#mainFeatures">Main features</a></li>
+                <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+                <li><a class="nav-link" href="#What_is_Python?">What is Python?</a></li>
+                <li><a class="nav-link" href="#Python_Syntax">Python Syntax</a></li>
+                <li><a class="nav-link" href="#Is_Python_OOP?">Is Python OOP?</a></li>
+                <li><a class="nav-link" href="#Main_Features">Main features</a></li>
             </nav>
 
-            <section class="main-section" id="introduction">
+            <section class="main-section" id="Introduction">
                 <header>Introduction</header>
                 <p>Python is a high-level, interpreted programming language known for its readability and versatility. It is widely used in web development, data analysis, artificial intelligence, scientific computing, and more.</p>
                 <p>Created by Guido van Rossum and first released in 1991, Python has grown to become one of the most popular programming languages in the world.</p>
@@ -33,7 +33,7 @@
                 <li>Large ecosystem</li>
             </section>
 
-            <section class="main-section" id="whatIsPython?">
+            <section class="main-section" id="What_is_Python?">
                 <header>What is Python?</header>
                 <p>Python is an interpreted, high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation.</p>
                 <p>Python's syntax allows programmers to express concepts in fewer lines of code than possible in languages such as C++ or Java.</p>
@@ -48,8 +48,8 @@
                 <li>Supports multiple programming paradigms</li>
                 <li>Extensive standard library</li>
             </section>
-            
-            <section class="main-section" id="pythonSyntax">
+
+            <section class="main-section" id="Python_Syntax">
                 <header>Python Syntax</header>
                 <p>Python's syntax is designed to be intuitive and its code highly readable. Python uses indentation to define code blocks, instead of curly braces or keywords.</p>
                 <p>Here is an example of a simple Python function:</p>
@@ -64,7 +64,7 @@
                 <li>Supports procedural programming</li>
             </section>
 
-            <section class="main-section" id="isPythonOPP">
+            <section class="main-section" id="Is_Python_OOP?">
                 <header>Is Python OOP?</header>
                 <p>Yes, Python supports Object-Oriented Programming (OOP). It allows the definition of classes along with composition and inheritance.</p>
                 <p>Here is an example of a simple class in Python:</p>
@@ -83,7 +83,7 @@
                 <li>Supports metaclasses</li>
             </section>
 
-            <section class="main-section" id="mainFeatures">
+            <section class="main-section" id="Main_Features">
                 <header>Main features</header>
                 <p>Python has several features that make it a powerful and versatile language:</p>
                 <p>Some of the main features include:</p>
